task: add transit id
